--- a/notebooks/meTest.ipynb
+++ b/notebooks/meTest.ipynb
@@ -32,6 +32,8 @@
     "import pandas as pd\n",
     "import sqlite3\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
     "# Add the 'src' directory to the path so we can import the wrapper class\n",
     "# Assumes this notebook is in the 'notebooks/' folder and source is in 'src/'\n",
@@ -47,396 +49,39 @@
    "execution_count": 2,
    "id": "9ac86220",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded Profile: England_Internal\n",
-      "{'primary_color': '#CE1124', 'secondary_color': '#F4C3C3', 'title_prefix': 'ENG - OFFICIAL: ', 'show_watermark': 'True', 'logo_path': 'assets/logo_eng.jpg', 'font_family': 'Arial'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. Fetch Configuration\n",
-    "vProfileName = 'England_Internal'\n",
+    "vProfileName = 'GaryTest'\n",
     "\n",
     "# Fetch config from DB\n",
-    "vConfig = fGetReportConfig(vProfileName)\n",
-    "\n",
-    "print(f\"Loaded Profile: {vProfileName}\")\n",
-    "print(vConfig)\n"
+    "vConfig = fGetReportConfig(vProfileName)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "03ffde82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfRun = fGetRunbyMonth()\n",
+    "vTotalRun = dfRun['total_distance'].sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "03ffde82",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "run_month",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "total_distance",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "9315a2f5-4792-4051-a7d6-466d2e3bad61",
-       "rows": [
-        [
-         "0",
-         "202411",
-         "502436.0"
-        ],
-        [
-         "1",
-         "202412",
-         "497318.0"
-        ],
-        [
-         "2",
-         "202501",
-         "609653.0"
-        ],
-        [
-         "3",
-         "202502",
-         "286261.0"
-        ],
-        [
-         "4",
-         "202503",
-         "387711.0"
-        ],
-        [
-         "5",
-         "202504",
-         "293026.0"
-        ],
-        [
-         "6",
-         "202505",
-         "411298.0"
-        ],
-        [
-         "7",
-         "202506",
-         "308549.0"
-        ],
-        [
-         "8",
-         "202507",
-         "478560.0"
-        ],
-        [
-         "9",
-         "202508",
-         "477691.0"
-        ],
-        [
-         "10",
-         "202509",
-         "486770.0"
-        ],
-        [
-         "11",
-         "202510",
-         "464157.0"
-        ],
-        [
-         "12",
-         "202511",
-         "555933.0"
-        ],
-        [
-         "13",
-         "202512",
-         "414674.0"
-        ]
-       ],
-       "shape": {
-        "columns": 2,
-        "rows": 14
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>run_month</th>\n",
-       "      <th>total_distance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>202411</td>\n",
-       "      <td>502436.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>202412</td>\n",
-       "      <td>497318.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>202501</td>\n",
-       "      <td>609653.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>202502</td>\n",
-       "      <td>286261.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>202503</td>\n",
-       "      <td>387711.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>202504</td>\n",
-       "      <td>293026.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>202505</td>\n",
-       "      <td>411298.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>202506</td>\n",
-       "      <td>308549.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>202507</td>\n",
-       "      <td>478560.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>202508</td>\n",
-       "      <td>477691.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>202509</td>\n",
-       "      <td>486770.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>202510</td>\n",
-       "      <td>464157.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>202511</td>\n",
-       "      <td>555933.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>202512</td>\n",
-       "      <td>414674.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   run_month  total_distance\n",
-       "0     202411        502436.0\n",
-       "1     202412        497318.0\n",
-       "2     202501        609653.0\n",
-       "3     202502        286261.0\n",
-       "4     202503        387711.0\n",
-       "5     202504        293026.0\n",
-       "6     202505        411298.0\n",
-       "7     202506        308549.0\n",
-       "8     202507        478560.0\n",
-       "9     202508        477691.0\n",
-       "10    202509        486770.0\n",
-       "11    202510        464157.0\n",
-       "12    202511        555933.0\n",
-       "13    202512        414674.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "dfRun = fGetRunbyMonth()\n",
-    "\n",
-    "display(dfRun)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "cc9b268d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "column_name",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "display_name",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "column_description",
-         "rawType": "object",
-         "type": "string"
-        }
-       ],
-       "ref": "5d703814-c5fc-479e-9005-41552215d5fd",
-       "rows": [
-        [
-         "0",
-         "region_name",
-         "Region Name",
-         "Geographic region."
-        ],
-        [
-         "1",
-         "total_revenue",
-         "Total Revenue (GBP)",
-         "Revenue post-tax."
-        ],
-        [
-         "2",
-         "efficiency_rate",
-         "Efficiency Score",
-         "Output / Input ratio."
-        ],
-        [
-         "3",
-         "monthly_total_uda",
-         "Total Deliveries",
-         "Total packages attempted."
-        ]
-       ],
-       "shape": {
-        "columns": 3,
-        "rows": 4
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>column_name</th>\n",
-       "      <th>display_name</th>\n",
-       "      <th>column_description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>region_name</td>\n",
-       "      <td>Region Name</td>\n",
-       "      <td>Geographic region.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>total_revenue</td>\n",
-       "      <td>Total Revenue (GBP)</td>\n",
-       "      <td>Revenue post-tax.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>efficiency_rate</td>\n",
-       "      <td>Efficiency Score</td>\n",
-       "      <td>Output / Input ratio.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>monthly_total_uda</td>\n",
-       "      <td>Total Deliveries</td>\n",
-       "      <td>Total packages attempted.</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         column_name         display_name         column_description\n",
-       "0        region_name          Region Name         Geographic region.\n",
-       "1      total_revenue  Total Revenue (GBP)          Revenue post-tax.\n",
-       "2    efficiency_rate     Efficiency Score      Output / Input ratio.\n",
-       "3  monthly_total_uda     Total Deliveries  Total packages attempted."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dfDict = fGetDataDictionary()\n",
-    "display(dfDict)\n",
-    "# Initialize Writer\n",
-    "vReport = EnterpriseExcelWriter(\"GaryTest.xlsx\", vConfig=vConfig)\n",
-    "vReport.fSetColumnMapping(dfDict)\n"
+    "dfDict = fGetDataDictionary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7047fdcf",
    "metadata": {},
    "outputs": [
@@ -449,9 +94,30 @@
     }
    ],
    "source": [
+    "vReport = EnterpriseExcelWriter(\"GaryTest.xlsx\", vConfig=vConfig)\n",
+    "vReport.fSetColumnMapping(dfDict)\n",
+    "# Adds a title\n",
     "vReport.fAddTitle(\"Gary Performance Report\")\n",
-    "# Finish\n",
-    "vReport.fClose()"
+    "vReport.fAddKpiRow({'Total Distance Run': vTotalRun})\n",
+    "vReport.fSkipRows(1)\n",
+    "\n",
+    "# C. Create Python Image Chart (Seaborn) Set cursor location for where to put graph. \n",
+    "vGraphRow = vReport.vRowCursor\n",
+    "# Want to add a wrapper around the creation of these charts? \n",
+    "\n",
+    "vThemeColour = vConfig.get('Global', {}).get('primary_colour', 'blue')    \n",
+    "plt.figure(figsize=(8, 4))\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "vChart = sns.barplot(data=dfRun, x='run_month', y='total_distance', color=vThemeColour)\n",
+    "vChart.set_title('Run Volume by Month', fontsize=14, color=vThemeColour)\n",
+    "vFigure = vChart.get_figure()\n",
+    "vReport.fAddImageChart(vFigure, vRow=vGraphRow)\n",
+    "plt.close() # Clean up memory\n",
+    "\n",
+    "vReport.fSkipRows(20)\n",
+    "vReport.fWriteDataframe(dfRun, vAddTotals=True)\n",
+    "\n",
+    "vReport.fClose() "
    ]
   }
  ],
