--- a/notebooks/meTest.ipynb
+++ b/notebooks/meTest.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "c3d25337",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "9ac86220",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "03ffde82",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "cc9b268d",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7047fdcf",
    "metadata": {},
    "outputs": [
@@ -105,17 +105,26 @@
     "vGraphRow = vReport.vRowCursor\n",
     "# Want to add a wrapper around the creation of these charts? \n",
     "\n",
-    "vThemeColour = vConfig.get('Global', {}).get('primary_colour', 'blue')    \n",
-    "plt.figure(figsize=(8, 4))\n",
-    "sns.set_style(\"whitegrid\")\n",
-    "vChart = sns.barplot(data=dfRun, x='run_month', y='total_distance', color=vThemeColour)\n",
-    "vChart.set_title('Run Volume by Month', fontsize=14, color=vThemeColour)\n",
-    "vFigure = vChart.get_figure()\n",
-    "vReport.fAddImageChart(vFigure, vRow=vGraphRow)\n",
-    "plt.close() # Clean up memory\n",
-    "\n",
+    "vReport.fAddSeabornChart(dfRun, vXCol='run_month', vYCol='total_distance', vTitle='Run Volume', vRow=7)\n",
+    "vReport.fAddSeabornChart(\n",
+    "    dfRun, \n",
+    "    vXCol='run_month', \n",
+    "    vYCol='total_distance', \n",
+    "    vTitle='Run Volume', \n",
+    "    vRow=47, \n",
+    "    vChartType='line'\n",
+    ")\n",
     "vReport.fSkipRows(20)\n",
     "vReport.fWriteDataframe(dfRun, vAddTotals=True)\n",
+    "\n",
+    "    \n",
+    "# Tab 2: Appendix\n",
+    "vReport.fNewSheet(\"Appendix\", \"Detailed definitions\")\n",
+    "    \n",
+    "# This uses the specific 'DataDict' config component for styling headers\n",
+    "vReport.fAddDataDictionary(dfDict)\n",
+    "\n",
+    "vReport.fGenerateTOC()\n",
     "\n",
     "vReport.fClose() "
    ]
