--- a/notebooks/meTest.ipynb
+++ b/notebooks/meTest.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "c3d25337",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "9ac86220",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "03ffde82",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "cc9b268d",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7047fdcf",
    "metadata": {},
    "outputs": [
@@ -96,14 +96,11 @@
    "source": [
     "vReport = EnterpriseExcelWriter(\"GaryTest.xlsx\", vConfig=vConfig)\n",
     "vReport.fSetColumnMapping(dfDict)\n",
-    "# Adds a title\n",
+    "\n",
     "vReport.fAddTitle(\"Gary Performance Report\")\n",
+    "vReport.fAddText(\"Gary Performance Report\",vFontSize=12)\n",
     "vReport.fAddKpiRow({'Total Distance Run': vTotalRun})\n",
     "vReport.fSkipRows(1)\n",
-    "\n",
-    "# C. Create Python Image Chart (Seaborn) Set cursor location for where to put graph. \n",
-    "vGraphRow = vReport.vRowCursor\n",
-    "# Want to add a wrapper around the creation of these charts? \n",
     "\n",
     "vReport.fAddSeabornChart(dfRun, vXCol='run_month', vYCol='total_distance', vTitle='Run Volume', vRow=7)\n",
     "vReport.fAddSeabornChart(\n",
