Start streamlit app
Starting the streamlit app to add a gui interface. This is a first POC.

--- a/notebooks/meTest.ipynb
+++ b/notebooks/meTest.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7047fdcf",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,10 @@
     "vReport.fSetColumnMapping(dfDict)\n",
     "\n",
     "vReport.fAddTitle(\"Gary Performance Report\")\n",
-    "vReport.fAddText(\"Gary Performance Report\",vFontSize=12)\n",
+    "# Example: Adding a note with specific bold/coloured words\n",
+    "vReport.fAddText([\"Gary \", {'text': 'Performance ', 'bold': True, 'colour': 'red'},  \"Report\"],vFontSize=12, vFontColour = 'FF0000',vBgColour='FFFF11')\n",
+    "# Add a sensitivity banner at the top\n",
+    "vReport.fAddBanner(\"OFFICIAL - SENSITIVE - CONFIDENTIAL\", vStyleProfile='Warning')\n",
     "vReport.fAddKpiRow({'Total Distance Run': vTotalRun})\n",
     "vReport.fSkipRows(1)\n",
     "\n",
@@ -112,7 +115,8 @@
     "    vChartType='line'\n",
     ")\n",
     "vReport.fSkipRows(20)\n",
-    "vReport.fWriteDataframe(dfRun, vAddTotals=True)\n",
+    "vReport.fWriteDataframe(dfRun, vAddTotals=True, vAutoFilter=True)\n",
+    "vReport.fAddConditionalFormat('total_distance', 'cell', {'criteria': '<', 'value': 500000})\n",
     "\n",
     "    \n",
     "# Tab 2: Appendix\n",
@@ -120,7 +124,12 @@
     "    \n",
     "# This uses the specific 'DataDict' config component for styling headers\n",
     "vReport.fAddDataDictionary(dfDict)\n",
+    "dfFilteredDict = vReport.fFilterDataDictionary(dfDict)\n",
+    "vReport.fWriteRichDataframe(dfFilteredDict)\n",
     "\n",
+    "# Works as expected but need to ensure only the right 2 columns are present. \n",
+    "vReport.fAddDefinitionList(dfFilteredDict)\n",
+    "vReport.fSetColumnWidths({4: 50}) \n",
     "vReport.fGenerateTOC()\n",
     "\n",
     "vReport.fClose() "
